HttpUnit release notes

Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "_self" target only works for links, not forms

Limitations: HttpUnit does not support JavaScript


Revision History:
Additions:
    1. Added getTableWithID method to WebResponse, ParsedHTML
    2. Implemented support for sendRedirect, getServletContext in ServletUnit
    3. Added recognition of content charset header. This should allow for proper handling of non-ascii html pages.
     
21-Nov-00
Additions:
    1. Introductory ServletUnit functionality (parameters and sessions, but no JSP, no redirect, no forwarding)
    2. WebConversation now has a new public base class: WebClient
    3. Any message header may now be defined, using: WebClient.setHeaderField and will be sent on all subsequent requests
    4. Forms may now be retrieved by their name attributes, using WebResponse.getFormWithName()

16-Nov-00 1.2
Acknowledgements:
    Thanks to Robert Krueger for providing an interface to the xerces parser for XML web responses.
    Thanks to Marco Tamanti and Gabriele Antonelli for suggesting ways to support file URLs
    
Problems corrected:
    1. Unnamed parameters are no longer submitted as part of a form request
    2. Searching for tables beginning with a string no longer aborts with NullPointerException if the table is missing cells
    3. A problem which caused WebResponse.java to fail compilation under JDK 1.1 has been corrected

Additions:
    1. Forms with multiple buttons are now supported, using the SubmitButton class.
    2. WebResponse now supports finding a table via its summary text, using getTableWithSummary().
    3. XML parsing is now supported. If WebResponse.getDOM is called for a non-HTML response (content type is not "text/html"), 
       the xerces parser will be invoked to treat the response as XML.
    4. File URLs (file:xxx) are now supported 
            
17-Oct-00 1.1
Acknowledgements: