@@ -53,5 +53,7 @@ a cvs client, accessing the repository at <code>:pserver:anonymous@cvs.httpunit.
 WIDTH="88" HEIGHT="31" BORDER="0" ALT="SourceForge Logo" NATURALSIZEFLAG="0"
 ALIGN="TOP"></font></p>
 
+<P><FONT SIZE=-2>A <A HREF="http://wiki.esm.co.jp:8080/xp/29">Japanese version</A> of this page and the cookbook are available, thanks to Tuyoshi Ushio.
+
 </BODY>
 </HTML>
